kap.39 8243/22642 koden virker. der er ændret i main_fragment.xml, MainViewModel.kt samt MainFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ViewModelDemo</string>
+    <string name="frontpageText">MainFragment Smyth kap 39 8104/22642</string>
+    <string name="convertButtonText">Convert</string>
 </resources>
